--- a/app/src/styles/_header.scss
+++ b/app/src/styles/_header.scss
@@ -4,19 +4,23 @@ $headerColor: #333;
 
 .nav {
 	width: 100%;
+	position: relative;
+	z-index: 10;
 	box-sizing: border-box;
 	background-color: #393D40;
 
-	@include shadow(0, 0, 10, 0, rgba(0,0,0,0.9));	
+	@include shadow(0, 0, 10px, 0, rgba(0,0,0,0.9));	
 
 	.nav__brand {
 		display: inline-block;
 		margin-left: 1.2em;
+		vertical-align: top;
 
 		a {
 			width: 100%;
 			height: 100%;
 			display: block;
+			margin-top: em(20);
 		}
 
 		img.brand__icon {
@@ -45,6 +49,20 @@ $headerColor: #333;
 				text-transform: uppercase;
 				font-weight: 700;
 				font-size: 12px;
+				display: inline-block;
+				
+				img {
+					display: block;
+					width: em(40);
+					height: em(40);
+					margin: 0 auto;
+					text-align: center;
+				}
+
+
+				.nav__description {
+					margin-top: em(10);
+				}
 			}
 
 			&:hover {
@@ -64,7 +82,7 @@ $headerColor: #333;
 		float: right;
 		
 		margin-right: 2em;
-		margin-top: em(19);
+		margin-top: em(27);
 		
 		input {
 			width: 13em;
